# badc

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
bad/source/: ast.rs  context.rs  lex.rs  lib.rs  state.rs
badc/source/: main.rs
source/bad/: bad.rs  compilation_configuration.rs
source/badc/: badc.rs
