[package]
name = "bad"
authors = [ "ThePhD", "mcy" ]
version = "0.0.0"
edition = "2021"
keywords = [ "bad", "b", "compiler", "shitpost", "shitcode" ]
license = "CC0-1.0"

[lib]
name = "bad"
path = "bad/source/lib.rs"


[[bin]]
name = "badc"
path = "badc/source/main.rs"


[dependencies]
[dependencies.bumpalo]
version = ">=3.11.1"
[dependencies.logos]
version = ">=0.12.1"
[dependencies.clap]
version = ">=4.0.24"
features = ["derive"]
